--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -6,7 +6,7 @@
 
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
+      <!-- <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
       <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
       <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
       <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
@@ -18,8 +18,10 @@
       <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png" />
       <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
       <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
-      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" /> -->
       <link rel="manifest" href="/manifest.json" />
+      <link rel="icon"
+            href="https://lh3.googleusercontent.com/0MXTtqlKDRConBYGLG2ZI42qXDtVwMob7zCvyE7XyMk6T63SH7YjlHrNruJhTj4h_bPPHhPaTdV4=s90">
       <meta name="msapplication-TileColor" content="#ffffff" />
       <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
       <meta name="theme-color" content="#ffffff" />
@@ -169,8 +171,14 @@ ga('send', 'pageview');
 
                                           <h2>Contact Us</h2>
 
-                                          <p>If you have any questions about these Terms, please contact us at
-                                                contactpage###</p>
+                                          <p>If you have any questions about these Terms, please contact us below</p>
+                                    </div>
+
+                                    <div class="col-md-12" style="align-content: center;">
+                                          <iframe
+                                                src="https://docs.google.com/forms/d/e/1FAIpQLScHOE76LvWf_WkusPSamlZ0usYrXgsA7SaTZn5wY-KUB2Rvuw/viewform?embedded=true"
+                                                width="100%" height="1321" frameborder="0" marginheight="0"
+                                                marginwidth="0">Loading…</iframe>
                                     </div>
 
                               </div>
